Arreglada compatibilidad con Java 8